--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,9 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  background: linear-gradient(
+    90deg,
+    rgba(48, 16, 255, 1) 0%,
+    rgba(100, 115, 255, 1) 100%
+  );
 }
