--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -1,34 +1,48 @@
 .container {
-  max-width: 1200px;
+  max-width: 700px;
   width: 100%;
-  margin: 0 auto;
+  min-height: 700px;
+  height: 100%;
+  margin: 10% auto;
+  background-color: #161a2b;
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
 }
 
 h1 {
   font-weight: 900;
-  font-size: 3rem;
+  font-size: 52px;
+  color: #fff;
 }
 
 .form {
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .form input {
-  width: 70%;
-  margin: auto;
-  padding: 0.2rem;
+  padding: 14px 32px 14px 16px;
+  border-radius: 4px 0 0 4px;
+  border: 2px solid #0c51ff;
+  outline: none;
+  width: 320px;
+  background: transparent;
+  color: #fff;
 }
 
 .form button {
-  width: 20%;
-  margin: auto;
-  margin-top: 1rem;
-  padding: 0.5rem;
-  background-color: transparent;
-  border-radius: 5px;
   cursor: pointer;
+  padding: 16px;
+  border: none;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  outline: none;
+  background-color: #0c51ff;
+  color: #fff;
+  text-transform: capitalize;
 }
 
 ul {
@@ -37,4 +51,10 @@ ul {
   justify-content: center;
   align-items: center;
   list-style: none;
+  margin-top: 100px;
+  padding: 0;
+}
+
+ul p {
+  color: #fff;
 }
