--- a/src/Components/Lists/Lists.module.css
+++ b/src/Components/Lists/Lists.module.css
@@ -1,22 +1,37 @@
 .lists {
   margin: 20px 0;
   border: 1px solid;
-  padding: 1rem;
+  padding: 25px;
   border-radius: 5px;
+  background-color: #42b9f5;
+}
+
+.lists:nth-child(4n + 1) {
+  background-color: #0774ab;
+}
+
+.lists:nth-child(4n + 2) {
+  background-color: #0344d2;
+}
+
+.lists:nth-child(4n + 3) {
+  background-color: #031655;
 }
 
 .lists span {
   font-size: 32px;
   font-weight: 400;
-  padding: 1rem;
+  padding: 15px;
 }
 
 .lists button {
   background-color: transparent;
+  border-color: #fff;
   border-radius: 5px;
   padding: 5px 12px;
   margin-right: 15px;
   cursor: pointer;
+  color: #fff;
 }
 
 .check {
@@ -24,5 +39,5 @@
 }
 
 .uncheck {
-  color: #000;
+  color: #fff;
 }
