--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -1,19 +1,20 @@
 .container {
-  max-width: 700px;
+  max-width: 800px;
   width: 100%;
-  min-height: 700px;
-  height: 100%;
-  margin: 10% auto;
+  height: 600px;
+  margin: auto;
   background-color: #161a2b;
   border-radius: 10px;
   text-align: center;
   padding: 20px;
+  overflow-y: auto;
 }
 
 h1 {
   font-weight: 900;
   font-size: 52px;
   color: #fff;
+  text-transform: capitalize;
 }
 
 .form {
