--- a/src/Components/Lists/Lists.module.css
+++ b/src/Components/Lists/Lists.module.css
@@ -1,9 +1,12 @@
 .lists {
-  margin: 20px 0;
+  margin: 15px 0;
   border: 1px solid;
   padding: 25px;
   border-radius: 5px;
   background-color: #42b9f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .lists:nth-child(4n + 1) {
@@ -19,19 +22,20 @@
 }
 
 .lists span {
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 400;
-  padding: 15px;
+  margin-right: 15px;
 }
 
 .lists button {
   background-color: transparent;
   border-color: #fff;
   border-radius: 5px;
-  padding: 5px 12px;
+  padding: 5px 10px;
   margin-right: 15px;
   cursor: pointer;
   color: #fff;
+  font-size: 24px;
 }
 
 .check {
