--- a/src/Components/Overlay/Overlay.module.css
+++ b/src/Components/Overlay/Overlay.module.css
@@ -12,22 +12,13 @@
 .overlay {
   position: fixed;
   top: 30vh;
-  left: 5%;
-  width: 90%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  max-width: 900px;
   background-color: #cfcabc;
   padding: 24px;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 7;
-}
-
-@keyframes slide-down {
-  from {
-    opacity: 0;
-    transform: translateY(-3rem);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  text-align: center;
 }
