--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -11,7 +11,7 @@
   background-color: #161a2b;
   border-radius: 10px;
   padding: 10px 15px;
-  transition: all 300ms ease-in;
+  transition: all 300ms ease;
   color: #fff;
 }
 
