--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -68,7 +68,8 @@ ul p {
 
 @media (max-width: 767px) {
   .container {
-    height: 800px;
+    height: 550px;
+    padding: 8px;
   }
 
   h1 {
@@ -79,12 +80,24 @@ ul p {
     flex-direction: column;
   }
 
+  .form input {
+    padding: 10px;
+    border-radius: 4px;
+  }
+
+  .form input::placeholder {
+    font-size: 22px;
+  }
+
   .form button {
     margin-top: 15px;
+    font-size: 22px;
+    padding: 10px;
+    border-radius: 4px;
   }
 
   ul {
-    margin-top: 35px;
+    margin-top: 25px;
   }
 
   ul p {
