--- a/src/Components/Overlay/Overlay.module.css
+++ b/src/Components/Overlay/Overlay.module.css
@@ -11,9 +11,9 @@
 
 .overlay {
   position: fixed;
-  top: 30vh;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -50%);
   max-width: 900px;
   background-color: #cfcabc;
   padding: 24px;
@@ -25,7 +25,6 @@
 
 @media (max-width: 767px) {
   .overlay {
-    top: 15vh;
     width: 100%;
   }
 }
